Kafka/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka1
  name: kafka1
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      tolerations:
        - effect: NoSchedule
          key: kafka
          operator: Equal
          value: "true"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "kafka1"
            topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - kafka
            weight: 1
      containers:
        - name: kafka1
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
          env:
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_ADVERTISED_PORT
              value: "9092"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zoo1:2181,zoo2:2181
            - name: KAFKA_ADVERTISED_HOST_NAME
              value: "a3dbe958de50b42a88381d11adf08ab0-1670368425.ap-south-1.elb.amazonaws.com"
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka2
  name: kafka2
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka2
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka2
    spec:
      tolerations:
        - effect: NoSchedule
          key: kafka
          operator: Equal
          value: "true"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "kafka2"
            topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - kafka
            weight: 1
      containers:
        - name: kafka2
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
          env:
            - name: KAFKA_BROKER_ID
              value: "2"
            - name: KAFKA_ADVERTISED_PORT
              value: "9092"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zoo1:2181,zoo2:2181
            - name: KAFKA_ADVERTISED_HOST_NAME
              value: "abcdde564218f40a0af49ecde8b5235c-1922610935.ap-south-1.elb.amazonaws.com"              
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
