Kafka/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaf1
  namespace: kafka
spec:
  type: LoadBalancer
  ports:
    - name: port-9092
      port: 9092
      protocol: TCP
  selector:
    app: kafka1
---
apiVersion: v1
kind: Service
metadata:
  name: kaf2
  namespace: kafka
spec:
  type: LoadBalancer
  ports:
    - name: port-9092
      port: 9092
      protocol: TCP
  selector:
    app: kafka2
