Kafka/sample-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"alert-engine-develop","name":"alert-engine"},"name":"alert-engine","namespace":"default"},"spec":{"gateways":["op-gw"],"hosts":["alert-engine-develop.outpathprod.com","alert-engine-develop"],"http":[{"route":[{"destination":{"host":"alert-engine","port":{"number":9055}}}]}]}}
  creationTimestamp: "2023-01-11T11:04:40Z"
  generation: 9
  labels:
    app.kubernetes.io/instance: alert-engine-develop
    name: alert-engine
  name: alert-engine
  namespace: default
  resourceVersion: "10847161"
  uid: 681bda41-358b-4a47-ba30-bfb98ef8f71a
spec:
  gateways:
  - op-gw
  hosts:
  - alert-engine-develop.outpathprod.com
  - alert-engine-develop
  http:
  - route:
    - destination:
        host: alert-engine
        port:
          number: 9055
