Kafka/zookeeper-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper1
  name: zookeeper1
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper1
  template:
    metadata:
      labels:
        app: zookeeper1
    spec:
      tolerations:
        - effect: NoSchedule
          key: kafka
          operator: Equal
          value: "true"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "zookeeper1"
            topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - kafka
            weight: 1
      containers:
        - name: zookeeper1
          image: digitalwonderland/zookeeper
          ports:
            - containerPort: 2181
            - containerPort: 2888
            - containerPort: 3888
          env:
            - name: ZOOKEEPER_ID
              value: "1"
            - name: ZOOKEEPER_SERVER_1
              value: zoo1
            - name: ZOOKEEPER_SERVER_2
              value: zoo2
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper2
  name: zookeeper2
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper2
  template:
    metadata:
      labels:
        app: zookeeper2
    spec:
      tolerations:
        - effect: NoSchedule
          key: kafka
          operator: Equal
          value: "true"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "zookeeper2"
            topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - kafka
            weight: 1
      containers:
        - name: zookeeper2
          image: digitalwonderland/zookeeper
          ports:
            - containerPort: 2181
            - containerPort: 2888
            - containerPort: 3888
          env:
            - name: ZOOKEEPER_ID
              value: "1"
            - name: ZOOKEEPER_SERVER_1
              value: zoo1
            - name: ZOOKEEPER_SERVER_2
              value: zoo2
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
